--- a/index.html
+++ b/index.html
@@ -11,96 +11,76 @@
 <body>
 
     <header>
-        <h1>Web Studio</h1>
-
-
         <nav>
-            <button>
-                <h2>Studio</h2>
-            </button>
-            <button>
-                <h2>Portfolio</h2>
-            </button>
-            <button>
-                <h2>Contacts</h2>
-            </button>
-        </nav>
-        <a href="mailto:kaprengau@gmail.com">kaprengau@gmail.com</a>
-        <a href="tel:+380667261300">+380667261300</a>
 
+            <a href="">
+                Web Studio</a>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li> <a href="">Portfolio</a></li>
+                <li> <a href="">Contacts</a></li>
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
     </header>
-    <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
-    </section>
     <main>
-        <ul>
-            <section>
+        <section>
+            <h1>Effective Solutions
+                for Your Business</h1>
+            <button>Order Service</button>
+        </section>
+        <section>
+            <ul>
                 <li>
                     <h2>Strategy</h2>
-                    <p>Our goal is to identify the businessproblem to walk away with the perfect and creative solution.
-                    </p>
+                    <p>Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
                     <h2>Punctuality</h2>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.
-                    </p>
+                        time.</p>
                 </li>
-
                 <li>
                     <h2>Diligence</h2>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.
-                    </p>
+                        risk.</p>
                 </li>
-
                 <li>
                     <h2>Technologies</h2>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
-                    </p>
+                    <p> Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.</p>
                 </li>
-
-            </section>
-        </ul>
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li>
-                    <img src="images/Rectangle 71-2.jpg" alt="">
-                </li>
-
-                <li><img src="images/Rectangle 71-1.jpg" alt=""></li>
-                <li><img src="images/Rectangle 71.jpg" alt=""></li>
 
             </ul>
+
+        </section>
+
+        <section>
+            <h2>What are we doing</h2>
+            <img src="images/Rectangle 71-2.jpg" alt="PC monitor">
+            <img src="images/Rectangle 71-1.jpg" alt="WhatsApp">
+            <img src="images/Rectangle 71.jpg" alt="phone">
         </section>
 
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="images/img-3.jpg" alt=""></li>
-                <li><img src="images/img-2.jpg" alt=""></li>
-                <li><img src="images/img-1.jpg" alt=""></li>
-                <li><img src="images/img.jpg" alt=""></li>
+                <li><img src="/images/img-2.jpg" alt="face"></li>
+                <li><img src="/images/Team Card 2.jpg" alt="face"></li>
+                <li><img src="/images/img-1.jpg" alt="face"></li>
+                <li><img src="/images/img.jpg" alt="face"></li>
             </ul>
         </section>
     </main>
     <footer>
-        <h2>WebStudio</h2>
+        <a href="">Web Studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
 
     </footer>
 
-
-
-
-
-
-
 </body>
-
 
 </html>
