--- a/index.html
+++ b/index.html
@@ -67,10 +67,24 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="/images/img-2.jpg" alt="face"></li>
-                <li><img src="/images/Team Card 2.jpg" alt="face"></li>
-                <li><img src="/images/img-1.jpg" alt="face"></li>
-                <li><img src="/images/img.jpg" alt="face"></li>
+                <li><img src="/images/img-2.jpg" alt="face">
+                    <h2>
+                        Mark Guerrero
+                    </h2>
+                    <p>Product Designer</p>
+                </li>
+                <li><img src="/images/img-1-1.jpg" alt="face">
+                    <h2>Tom Ford</h2>
+                    <p>Frontend Developer</p>
+                </li>
+                <li><img src="/images/img-1.jpg" alt="face">
+                    <h2>Camila Garcia</h2>
+                    <p>Marketing</p>
+                </li>
+                <li><img src="/images/img.jpg" alt="face">
+                    <h2>Daniel Wilson</h2>
+                    <p>UI Designer</p>
+                </li>
             </ul>
         </section>
     </main>
