--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
     </header>
     <main>
         <section>
@@ -59,29 +59,34 @@
 
         <section>
             <h2>What are we doing</h2>
-            <img src="images/Rectangle 71-2.jpg" alt="PC monitor">
-            <img src="images/Rectangle 71-1.jpg" alt="WhatsApp">
-            <img src="images/Rectangle 71.jpg" alt="phone">
+            <ul>
+                <li>
+                    <img src="images/Rectangle71-2.jpg" alt="PC monitor" width="200px">
+                </li>
+                <li><img src="images/Rectangle71-1.jpg" alt="WhatsApp" width="200px
+                    "></li>
+                <li><img src="images/Rectangle71.jpg" alt="phone" width="200px"></li>
+            </ul>
         </section>
 
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="/images/img-2.jpg" alt="face">
+                <li><img src="/images/img-2.jpg" alt="face" width="400px">
                     <h2>
                         Mark Guerrero
                     </h2>
                     <p>Product Designer</p>
                 </li>
-                <li><img src="/images/img-1-1.jpg" alt="face">
+                <li><img src="/images/img-1-1.jpg" alt="face" width="400px">
                     <h2>Tom Ford</h2>
                     <p>Frontend Developer</p>
                 </li>
-                <li><img src="/images/img-1.jpg" alt="face">
+                <li><img src="/images/img-1.jpg" alt="face" width="400px">
                     <h2>Camila Garcia</h2>
                     <p>Marketing</p>
                 </li>
-                <li><img src="/images/img.jpg" alt="face">
+                <li><img src="/images/img.jpg" alt="face" width="400px">
                     <h2>Daniel Wilson</h2>
                     <p>UI Designer</p>
                 </li>
