--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html land="en">
 
 <head>
     <meta charset="UTF-8">
@@ -13,16 +13,22 @@
     <header>
         <nav>
 
-            <a href="">
-                Web Studio</a>
+            <a href="./index.html">
+                <div> Web</div>
+                <div> Studio</div>
+            </a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li> <a href="">Portfolio</a></li>
                 <li> <a href="">Contacts</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
     <main>
         <section>
@@ -61,32 +67,32 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="images/Rectangle71-2.jpg" alt="PC monitor" width="200px">
+                    <img src="images/Rectangle71-2.jpg" alt="PC monitor" width="360px">
                 </li>
-                <li><img src="images/Rectangle71-1.jpg" alt="WhatsApp" width="200px
+                <li><img src="images/Rectangle71-1.jpg" alt="WhatsApp" width="360px
                     "></li>
-                <li><img src="images/Rectangle71.jpg" alt="phone" width="200px"></li>
+                <li><img src="images/Rectangle71.jpg" alt="phone" width="360px"></li>
             </ul>
         </section>
 
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="/images/img-2.jpg" alt="face" width="400px">
+                <li><img src="/images/img-2.jpg" alt="face" width="264px">
                     <h2>
                         Mark Guerrero
                     </h2>
                     <p>Product Designer</p>
                 </li>
-                <li><img src="/images/img-1-1.jpg" alt="face" width="400px">
+                <li><img src="/images/img-1-1.jpg" alt="face" width="264px">
                     <h2>Tom Ford</h2>
                     <p>Frontend Developer</p>
                 </li>
-                <li><img src="/images/img-1.jpg" alt="face" width="400px">
+                <li><img src="/images/img-1.jpg" alt="face" width="264px">
                     <h2>Camila Garcia</h2>
                     <p>Marketing</p>
                 </li>
-                <li><img src="/images/img.jpg" alt="face" width="400px">
+                <li><img src="/images/img.jpg" alt="face" width="264px">
                     <h2>Daniel Wilson</h2>
                     <p>UI Designer</p>
                 </li>
@@ -94,7 +100,7 @@
         </section>
     </main>
     <footer>
-        <a href="">Web Studio</a>
+        <a href="./index.html">Web Studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
 
