--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <nav>
 
             <a href="./index.html">
-                <div> Web</div>
-                <div> Studio</div>
+                Web Studio
             </a>
             <ul>
                 <li><a href="">Studio</a></li>
@@ -34,29 +33,31 @@
         <section>
             <h1>Effective Solutions
                 for Your Business</h1>
-            <button>Order Service</button>
+            <li>
+                <button>Order Service</button>
+            </li>
         </section>
         <section>
             <ul>
                 <li>
-                    <h2>Strategy</h2>
+                    <h3>Strategy</h3>
                     <p>Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h2>Punctuality</h2>
+                    <h3>Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h2>Diligence</h2>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.</p>
-                </li>
-                <li>
-                    <h2>Technologies</h2>
+                    <h3>Technologies</h3>
                     <p> Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.</p>
                 </li>
 
             </ul>
@@ -67,33 +68,33 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="images/Rectangle71-2.jpg" alt="PC monitor" width="360px">
+                    <img src="images/Rectangle71-2.jpg" alt="PC monitor" width="360">
                 </li>
-                <li><img src="images/Rectangle71-1.jpg" alt="WhatsApp" width="360px
+                <li><img src="images/Rectangle71-1.jpg" alt="WhatsApp" width="360
                     "></li>
-                <li><img src="images/Rectangle71.jpg" alt="phone" width="360px"></li>
+                <li><img src="images/Rectangle71.jpg" alt="phone" width="360"></li>
             </ul>
         </section>
 
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="/images/img-2.jpg" alt="face" width="264px">
-                    <h2>
+                <li><img src="images/img-2.jpg" alt="face" width="264">
+                    <h3>
                         Mark Guerrero
-                    </h2>
+                    </h3>
                     <p>Product Designer</p>
                 </li>
-                <li><img src="/images/img-1-1.jpg" alt="face" width="264px">
-                    <h2>Tom Ford</h2>
+                <li><img src="images/img-1-1.jpg" alt="face" width="264">
+                    <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li><img src="/images/img-1.jpg" alt="face" width="264px">
-                    <h2>Camila Garcia</h2>
+                <li><img src="images/img-1.jpg" alt="face" width="264">
+                    <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li><img src="/images/img.jpg" alt="face" width="264px">
-                    <h2>Daniel Wilson</h2>
+                <li><img src="images/img.jpg" alt="face" width="264">
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
