--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="./images/pad2.jpg" alt="face" width="264">
+                <li><img src="./images/card-1.jpg" alt="face" width="264">
                     <h3>
                         Mark Guerrero
                     </h3>
                     <p>Product Designer</p>
                 </li>
-                <li><img src="./images/pad.jpg" alt="face" width="264">
+                <li><img src="./images/card-2.jpg" alt="face" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li><img src="./images/pade3.jpg" alt="face" width="264">
+                <li><img src="./images/card-3.jpg" alt="face" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-                <li><img src="./images/pade4.jpg" alt="face" width="264">
+                <li><img src="./images/card-4.jpg" alt="face" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
