--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html land="en">
+<html lang="en">
+
+</html>
 
 <head>
     <meta charset="UTF-8">
@@ -33,9 +35,7 @@
         <section>
             <h1>Effective Solutions
                 for Your Business</h1>
-            <li>
-                <button>Order Service</button>
-            </li>
+            <button>Order Service</button>
         </section>
         <section>
             <ul>
@@ -68,10 +68,9 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="images/Rectangle71-2.jpg" alt="PC monitor" width="360">
+                    <img src="./images/Rectangle71-2.jpg" alt="PC monitor" width="360">
                 </li>
-                <li><img src="images/Rectangle71-1.jpg" alt="WhatsApp" width="360
-                    "></li>
+                <li><img src="images/Rectangle71-1.jpg" alt="WhatsApp" width="360"></li>
                 <li><img src="images/Rectangle71.jpg" alt="phone" width="360"></li>
             </ul>
         </section>
