--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
 
-            <a href="./index.html">
+            <a>
                 Web Studio
             </a>
             <ul>
@@ -30,11 +30,11 @@
         </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions
-                for Your Business</h1>
-            <button>Order Service</button>
-        </section>
+
+        <h1>Effective Solutions
+            for Your Business</h1>
+        <button type="button">Order Service</button>
+
         <section>
             <ul>
                 <li>
@@ -48,14 +48,15 @@
                         time.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p> Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.</p>
-                </li>
-                <li>
                     <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
+
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p> Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.</p>
                 </li>
 
             </ul>
@@ -68,8 +69,8 @@
                 <li>
                     <img src="./images/Rectangle71-2.jpg" alt="PC monitor" width="360">
                 </li>
-                <li><img src="images/Rectangle71-1.jpg" alt="WhatsApp" width="360"></li>
-                <li><img src="images/Rectangle71.jpg" alt="phone" width="360"></li>
+                <li><img src="./images/Rectangle71-1.jpg" alt="WhatsApp" width="360"></li>
+                <li><img src="./images/Rectangle71.jpg" alt="phone" width="360"></li>
             </ul>
         </section>
 
