--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <nav>
 
-            <a>
-                Web Studio
-            </a>
+
+            Web Studio
+
             <ul>
                 <li><a href="">Studio</a></li>
                 <li> <a href="">Portfolio</a></li>
@@ -30,13 +30,14 @@
         </address>
     </header>
     <main>
-
-        <h1>Effective Solutions
-            for Your Business</h1>
-        <button type="button">Order Service</button>
-
+        <section>
+            <h1>Effective Solutions
+                for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
         <section>
             <ul>
+                <h2>Content</h2>
                 <li>
                     <h3>Strategy</h3>
                     <p>Our goal is to identify the business
@@ -50,12 +51,12 @@
                 <li>
                     <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.</p>
+                        risk..</p>
 
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p> Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
 
@@ -99,7 +100,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
 
