--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
 
 
-            Web Studio
+            <a href="./index.html">WebStudio</a>
 
             <ul>
                 <li><a href="">Studio</a></li>
@@ -36,8 +36,8 @@
             <button type="button">Order Service</button>
         </section>
         <section>
+            <h2>Content</h2>
             <ul>
-                <h2>Content</h2>
                 <li>
                     <h3>Strategy</h3>
                     <p>Our goal is to identify the business
