--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 
     <header>
         <nav>
-
-
             <a href="./index.html">WebStudio</a>
-
             <ul>
                 <li><a href="">Studio</a></li>
                 <li> <a href="">Portfolio</a></li>
@@ -51,7 +48,7 @@
                 <li>
                     <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk..</p>
+                        risk.</p>
 
                 </li>
                 <li>
